# copier-python-template

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  copier.yml  pyproject.toml
template/: .env_template  .gitignore  .pre-commit-config.yaml.jinja  .ruff.toml  README.md.jinja  Taskfile.yml  pyproject.toml.jinja
template/.github/: pull_request_template.md
template/docs/: example.md
template/tests/: conftest.py  test_import.py.jinja
template/tests/config/: test_app_config.py.jinja
template/tests/logging/: test_logging.py.jinja
template/tests/{% if cli %}cli{% endif %}/: conftest.py.jinja  test_cli.py.jinja  test_simple_command.py.jinja
template/tests/{% if cli %}cli{% endif %}/subcommand/: test_subcommand.py.jinja  test_subsubcommand.py.jinja
template/{{ package_name }}/: __init__.py.jinja  {% if cli %}app_context.py{% endif %}.jinja
template/{{ package_name }}/config/: app_config.py.jinja
template/{{ package_name }}/logging/: logging.py
template/{{ package_name }}/{% if cli %}cli{% endif %}/: __main__.py.jinja  simple_command.py.jinja
template/{{ package_name }}/{% if cli %}cli{% endif %}/subcommand/: __init__.py.jinja  subsubcommand.py.jinja
tests/: conftest.py  test_project_structure.py
